--- a/Sprint-02/pages/about.html
+++ b/Sprint-02/pages/about.html
@@ -10,9 +10,9 @@
 
 <body>
     <ul>
-        <li><a href="/vallalati-webfejlesztes-feladatok-mentoraltra/Sprint-02/pages/about.html"> Elérhetőségünk</a></li>
-        <li><a href="/vallalati-webfejlesztes-feladatok-mentoraltra/Sprint-02/pages/discounts.html">Akcióink</a></li>
-        <li><a href="/vallalati-webfejlesztes-feladatok-mentoraltra/Sprint-02/pages/menu.html">Étlap</a></li>
+        <li><a href="/pages/about.html"> Elérhetőségünk</a></li>
+        <li><a href="/pages/discounts.html">Akcióink</a></li>
+        <li><a href="/pages/menu.html">Étlap</a></li>
     </ul>
     <h1>
         Elérhetőségünk
