--- a/Sprint-05/order-form.html
+++ b/Sprint-05/order-form.html
@@ -42,7 +42,7 @@
                     </div>
                     <span>Extra feltét:</span>
                     <div class="form-check">
-                        <input type="radio" class="form-check-input" id="nothing" name="extra" checked value="0">
+                        <input type="radio" class="form-check-input" id="nothing" name="extra" value="0"checked>
                         <label class="form-check-label" for="nothing">Nem kérek</label>
                     </div>
                     <div class="form-check"> 
